style: result search screen

--- a/src/app/components/searchresult/searchresult.component.sass
+++ b/src/app/components/searchresult/searchresult.component.sass
@@ -1,20 +1,9 @@
-
-$wThumb: 320px
-$hThumb: 180px
+.col
+  padding: 0 10px
+  margin: 10px 0
 
 .mat-card
-  max-width: ($wThumb - 48px)
-  min-height: $hThumb
-  // display: inline-block
-  .cover,
-  .text
-    // float: left
-  .cover
-    background-color: #0f0
-    img
-      width: $wThumb
-      height: $hThumb
-  
-  .mat-card-title,
-  .mat-card-content
+  img
+    object-fit: cover
+    background-color: black
       
