--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -3,14 +3,15 @@
 
 #wrapper
   height: 100%
+.container
+  padding: 10px
 
 #navbar
   width: 100%
   min-height: 100%
   transition: $ttPrimary
   justify-content: center
-  // display: block
-  // background: #0f0
+
 .loaded
 
 .searchDone
