--- a/src/sass/_reset.sass
+++ b/src/sass/_reset.sass
@@ -1,7 +1,7 @@
 // ## ## ## ## - RESET
 
 *, *::after, *::before
-  box-sizing: inherit
+  box-sizing: border-box
 
 body,h1,h2,h3,h4,h5,h6,p,ul
   margin: 0
