style: searchbar responsive

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -11,9 +11,13 @@
   min-height: 100%
   transition: $ttPrimary
   justify-content: center
+  searchbar
+    height: 100px
 
 .loaded
 
 .searchDone
   #navbar
     min-height: 0
+    height: 80px
+  
