style: searchbar error responsive

--- a/src/app/components/searchbar/searchbar.component.sass
+++ b/src/app/components/searchbar/searchbar.component.sass
@@ -6,14 +6,20 @@
   width: 480px
   transition: $ttPrimary
   +breakpoint(xs)
-    width: 320px
+    width: 300px
     .btn
       margin-top: 10px
+    .field
+      height: 60px
+    &.submitted.ng-invalid
+      .field
+        height: 80px
   .field,
   .btn
     width: 100%
-
+    transition: $ttPrimary
+  
   &.submitted
     transform: translateY(7px)
     &.ng-invalid
-      transform: translateY(0px)
+      transform: translateY(-2px)
