--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,5 +1,6 @@
 @import '~sass/mixins'
 @import '~sass/variables'
+@import '~sass/grid'
 
 #wrapper
   height: 100%
@@ -13,11 +14,14 @@
   justify-content: center
   searchbar
     height: 100px
-
+    +breakpoint(xs)
+      height: 150px
 .loaded
 
 .searchDone
   #navbar
     min-height: 0
     height: 80px
+    +breakpoint(xs)
+      height: 130px
   
