--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -30,6 +30,6 @@
     fxLayout="column" 
     fxLayout.xs="row" 
     fxLayoutAlign="center">
-    <button class="btn" mat-raised-button color="accent">Buscar</button>  
+    <button class="btn" mat-raised-button color="primary">Buscar</button>  
   </div>
 </form>
