--- a/search-tube/src/app/views/components/search/search.component.html
+++ b/search-tube/src/app/views/components/search/search.component.html
@@ -1,1 +1,8 @@
-<p>search works!</p>
+<div class="search-box">
+    <form>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Pesquisar" value="" />
+        <mat-icon matSuffix>search</mat-icon>
+      </mat-form-field>
+    </form>
+  </div>
