--- a/search-tube/src/styles.scss
+++ b/search-tube/src/styles.scss
@@ -36,6 +36,6 @@ $search-tube-theme: mat-light-theme($search-tube-primary, $search-tube-accent, $
 }
 
 
-html, body { height: 100%; }
+html, body { height: 100%; background-color: #f5f5f5;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
