refazendo o projeto, concertando erros e instalando as depedências necessárias para rodar.

--- a/youtube-react-clone/src/components/SideBar/SideBarItem/SideBarItem.css
+++ b/youtube-react-clone/src/components/SideBar/SideBarItem/SideBarItem.css
@@ -1,5 +1,5 @@
 .sidebar_item:hover{
-    background:rgba(230, 230, 230) !important;
+    background:rgb(230, 230, 230) !important; 
     cursor: pointer;
 }
 
