--- a/youtube-react-clone/src/components/WatchVideo/VideoMetaData/VideoMetaData.css
+++ b/youtube-react-clone/src/components/WatchVideo/VideoMetaData/VideoMetaData.css
@@ -1,4 +1,4 @@
-.video-metada {
+.video-metadata {
     grid-column: 1/2;
     color: #707070;
     font-size: 16px;
@@ -9,7 +9,7 @@
     color: #111;
 }
 
-.video-stats{
+.video-stats {
     display: flex;
     justify-content: space-between;
     width: 95.7%;
